--- a/Modular/partials/FAQ.html
+++ b/Modular/partials/FAQ.html
@@ -1,26 +1,35 @@
 
 <h2>Frequently Asked Questions</h2>
-<h4>How do you generate in silico metabolites?</h4>
+<h4>How do you generate <i>in silico</i> metabolites?</h4>
 <div class="well">
-These compounds are generated from hand-curated reaction rules generalized form chemistry according to the Enzyme Commission classification system. For more information please refer to:
+    These compounds are generated from hand-curated reaction rules generalized form chemistry according to the Enzyme
+    Commission classification system. For more information please refer to:
 </div>
 
 <h4>Why don't the compounds database include stereochemistry?</h4>
 <div class="well">
-BNICE does not handle chirality currently. As such, where multiple stereoisomers of a structure exist, the MINE entry will include information on all of the isomers.
+    BNICE does not handle chirality currently. As such, where multiple stereoisomers of a structure exist, the MINE
+    entry will include information on all of the isomers.
 </div>
 
 <h4>How can I integrate your database into my tool/pipeline?</h4>
 <div class="well">
-We offer client APIs in JavaScript, Python and Perl which cover all the functionality of this website. Please use our contact form to request the most recent version. Alternatively, you may request all the unannotated(license restrictions, sorry) structures as a SDF file.
+    We offer client APIs in JavaScript, Python and Perl which cover all the functionality of this website. Please
+        <a href="mailto:minedatabasescontact@gmail.com?Subject=Client%20request" target="_top"> contact us</a>
+    to request the most recent version. Alternatively, you may request all the unannotated(license restrictions, sorry)
+    structures as a SDF file.
 </div>
 
 <h4>I found an error/ I'm skeptical about the validity of a compound</h4>
 <div class="well">
-We would love to hear about it. Please let us know via our contact form.
+    We would love to hear about it. Please let us know by sending an email to
+        <a href="mailto:minedatabasescontact@gmail.com?" target="_top"> minedatabasescontact@gmail.com</a>
+    and let us know. If reproting a bug, please include information as to how the error was generated.
 </div>
 
 <h4>Are there any restrictions on the use of this website and APIs?</h4>
 <div class="well">
-MINEs are provided as a freely available resource. There are no licensing restrictions for non-commercial use but users are requested to cite: <paper>Commercial users must obtain a license from Pathway Solutions Inc. (www.pathway.jp) and explicit permission from the authors.
+    MINEs are provided as a freely available resource. There are no licensing restrictions for non-commercial use but
+    users are requested to cite: Commercial users must obtain a license from Pathway Solutions Inc.
+    (www.pathway.jp) and explicit permission from the authors.
 </div>
