fixed Metabolomics Model SEED ids

--- a/Modular/partials/list.html
+++ b/Modular/partials/list.html
@@ -18,7 +18,7 @@
                       <thead>  
         <tr>  
             <th></th> 
-            <th><h4>SEED ID</h4></th> 
+            <th><h4>MINE ID</h4></th>
             <th><h4>Formula</h4></th>  
         </tr>  
     </thead> 
@@ -33,7 +33,7 @@
                   <li  >{{i.Names[0]}}</li>
               </Ui>
                 </td>
-                    <td  style="vertical-align:middle"><h4>{{i.Model_SEED}}</h4></td>
+                    <td  style="vertical-align:middle"><h4>{{i.MINE_id}}</h4></td>
             
             <td  style="vertical-align:middle"><h4>{{i.Formula}}</h4></td>  </tr>
                   </tbody>
