Simplified structure search by loading the Marvin sketcher components into the controller.

--- a/Modular/partials/structuresres.html
+++ b/Modular/partials/structuresres.html
@@ -21,7 +21,7 @@
                 <a  ui-sref="acompound.overview({id:attribute._id})">
                     <img class="logo" ng-src="http://lincolnpark.chem-eng.northwestern.edu/Smiles_dump/{{attribute._id}}.svg" width="150" >
                 </a></td>
-            <td>{{attribute.Mine_id}}</td>
+            <td>{{attribute.MINE_id}}</td>
             <td>{{attribute.Names[0]}}</td>
             <td>{{attribute.Formula}}</td>
         </tr>
