--- a/Modular/partials/acompound.html
+++ b/Modular/partials/acompound.html
@@ -8,12 +8,12 @@
 	</tab>
 	<tab ui-sref="acompound.products">
 	  <tab-heading >
-	    Products ({{data.Product_of.length+0}})
+	    Product of ({{data.Product_of.length+0}})
 	  </tab-heading>
 	</tab>
 	<tab ui-sref="acompound.reactants">
 	  <tab-heading >
-	    Reactants ({{data.Reactant_in.length+0}})
+	    Reactant in ({{data.Reactant_in.length+0}})
 	  </tab-heading>
 	</tab>
 </tabset>
