--- a/Modular/partials/creator.html
+++ b/Modular/partials/creator.html
@@ -20,13 +20,6 @@
                 </tr>
                 </tbody>
             </table>
-            <select class="form form-inline" ng-model="reactantChoice" ng-options="c.name for c in cofactors"></select>
-            <input type='text' class="form form-inline" ng-model='indices'>
-            <button type="button" class="btn btn-primary"
-                    ng-click="addItem(reactants, reactantChoice.name)">Add Reactant</button>
-        </div>
-
-        <div class="form-group">
             <h4>Products</h4>
             <table class="table">
                 <thead><tr><td>Compound</td></tr></thead>
@@ -38,8 +31,10 @@
                 </tr>
                 </tbody>
             </table>
-            <select class="form" ng-model="productChoice" ng-options="c.name for c in cofactors"></select>
-            <button type="button" class="btn btn-primary" ng-click="addItem(products, productChoice.name)">Add Product</button>
+            <select class="form form-inline" ng-model="compoundChoice" ng-options="c.name for c in cofactors"></select>
+            <input type='text' class="form form-inline" ng-model='indices'>
+            <button type="button" class="btn btn-primary" ng-click="addItem(reactants, compoundChoice.name)">Add Reactant</button>
+            <button type="button" class="btn btn-primary" ng-click="addItem(products, compoundChoice.name)">Add Product</button>
         </div>
         <h4>Comments</h4>
         <input class="text-area" height="4" width="10" ng-model="comments">
