--- a/Modular/partials/creator.html
+++ b/Modular/partials/creator.html
@@ -38,11 +38,11 @@
         </div>
         <h4>Comments</h4>
         <input class="text-area" height="4" width="10" ng-model="comments">
-        <br>
+        <br><br>
         <div class="btn-group">
-            <button type="button" class="btn btn-primary" id="btn-setReact" ng-click="setReact()">Set Reactants</button>
-            <button type="button" class="btn btn-primary" id="btn-setProd" ng-click="setProd()">Set Products</button>
-            <button type="button" class="btn btn-primary" id="btn-genOp" ng-click="buildOp()">Generate Operator</button>
+            <button type="button" ng-class="buttonColor('mrvReactants')" ng-click="mrvIO('mrvReactants')">Set Reactants</button>
+            <button type="button" ng-class="buttonColor('mrvProducts')" ng-click="mrvIO('mrvProducts')">Set Products</button>
+            <button type="button" ng-class="buttonColor('operator')" ng-click="buildOp()">Generate Operator</button>
         </div>
         <a href="http://www.chemaxon.com"><img border="0" src="http://www.chemaxon.com/images/powered_100px.gif" alt="ChemAxon" ></a>
     </div>
