test operator now fully functional

--- a/Modular/partials/operator.html
+++ b/Modular/partials/operator.html
@@ -15,7 +15,7 @@
             <h3 class="panel-title">Tested Compounds</h3>
         </div>
         <table class="table">
-            <thead ng-show="testedCompounds">
+            <thead ng-show="testedCompounds.length">
                 <tr>
                     <td>KeggID</td>
                     <td>Reactions Catalyzed</td>
