shows first 5 names now

--- a/Modular/partials/compounds.html
+++ b/Modular/partials/compounds.html
@@ -16,13 +16,11 @@
         </tr>  
     </thead>  
     <tbody>
-        <tr ng-repeat="attribute in filteredData" ng-click="setSelected();" >
+        <tr ng-repeat="attribute in filteredData" ui-sref="acompound.overview({id:attribute._id})">
             <td>
-                <a  ui-sref="acompound.overview({id:attribute._id})">
-                    <img class="logo" ng-src="http://lincolnpark.chem-eng.northwestern.edu/Smiles_dump/{{attribute._id}}.svg" width="150" ></td>
-                </a>
+                <img class="logo" ng-src="http://lincolnpark.chem-eng.northwestern.edu/Smiles_dump/{{attribute._id}}.svg" width="150" ></td>
             <td>{{attribute.MINE_id}}</td>
-            <td>{{attribute.Names[0]}}</td>
+            <td><div ng-repeat="name in attribute.Names|limitTo:5">{{name}}<br></div></td>
             <td>{{attribute.Formula}}</td>
         </tr>
     </tbody>  
