--- a/Modular/partials/operator.html
+++ b/Modular/partials/operator.html
@@ -31,19 +31,20 @@
         <div class="input-group">
             <input type='text' class="form-control" ng-model='keggID' placeholder="Enter a KEGG ID">
             <span class="input-group-btn">
-                <button type="button" class="btn btn-primary" ng-click="testOperator(keggID)">Test Operator</button>
+                <button type="button" class="btn btn-primary" ng-disabled="!keggID" ng-click="testOperator(keggID)">Test Operator</button>
             </span>
         </div>
     </div><br>
     <div class="input-group">
         <input type='text' class="form-control" ng-model='mapDatabase' placeholder="Mapping Database">
         <span class="input-group-btn">
-            <button type="button" class="btn btn-primary" ng-click="mapOperator()">Map Operator</button>
+            <button id="map-btn" type="button" class="btn btn-primary" ng-disabled="!mapDatabase"
+                    ng-click="mapOperator(mapDatabase)">Map Operator</button>
         </span>
     </div><br>
     <div class="btn-group btn-group-justified">
         <div class="btn-group">
-            <button type="button" class="btn btn-danger" onClick="history.go(-1);return true;">Back to Editor</button>
+            <button type="button" class="btn btn-danger" ng-click="goEditor()" >Back to Editor</button>
         </div>
         <div class="btn-group">
             <button type="button" class="btn btn-primary" ng-click="downloadFile(operator, op_name+'.dat')">
