operator mapping now works as it should

--- a/Modular/partials/operator.html
+++ b/Modular/partials/operator.html
@@ -35,6 +35,7 @@
             </span>
         </div>
     </div><br>
+    {{map_message}}
     <div class="input-group">
         <input type='text' class="form-control" ng-model='mapDatabase' placeholder="Mapping Database">
         <span class="input-group-btn">
