--- a/Modular/partials/operator.html
+++ b/Modular/partials/operator.html
@@ -6,7 +6,13 @@
 <body>
 <div class="col-sm-7">
     <h3>Operator Preview</h3>
-    <textarea ng-model="operator" class="form-control" style="{resize: none}" rows="35"></textarea>
+    <textarea ng-model="operator" class="form-control" style="{resize: none}" rows="30"></textarea>
+    <div class="input-group">
+        <input type='file' class="form-control" multiple='false' id='operatorFile'>
+        <span class="input-group-btn">
+            <button type="button" class="btn btn-primary" ng-click="uploadOperator()">Upload Operator</button>
+        </span>
+    </div>
 </div>
 <div class="col-sm-5">
     <h3>Testing Functions</h3>
