--- a/Modular/partials/operator.html
+++ b/Modular/partials/operator.html
@@ -41,13 +41,25 @@
             </span>
         </div>
     </div><br>
-    {{map_message}}
-    <div class="input-group">
-        <input type='text' class="form-control" ng-model='mapDatabase' placeholder="Mapping Database">
-        <span class="input-group-btn">
-            <button id="map-btn" type="button" class="btn btn-primary" ng-disabled="!mapDatabase"
-                    ng-click="mapOperator(mapDatabase)">Map Operator</button>
-        </span>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h3 class="panel-title">Mapped Reactions</h3>
+        </div>
+        <div class="panel-body" ng-show='mappedReactions.length'>
+            {{mappedReactions[1].length}} of {{mappedReactions[0]}} total reactions mapped
+        </div>
+        <ul class="list-group">
+            <li class="list-group-item" ng-repeat='rxn in mappedReactions[1]'>
+                <a target="_blank" ng-href='http://www.genome.jp/dbget-bin/www_bget?rn:{{rxn}}'>{{rxn}}</a>
+            </li>
+        </ul>
+        <div class="input-group">
+            <input type='text' class="form-control" ng-model='mapDatabase' placeholder="Mapping Database">
+            <span class="input-group-btn">
+                <button id="map-btn" type="button" class="btn btn-primary" ng-disabled="!mapDatabase"
+                        ng-click="mapOperator(mapDatabase)">Map Operator</button>
+            </span>
+        </div>
     </div><br>
     <div class="btn-group btn-group-justified">
         <div class="btn-group">
