--- a/Modular/partials/compounds.html
+++ b/Modular/partials/compounds.html
@@ -1,11 +1,7 @@
 
-<h2>{{id}}</h2>
-<h2>{{searchText}}</h2>
-<h3>{{message}}</h3>
-</br>
-<h3>{{items}} </h3>  
-<pagination total-items="totalItems" page="currentPage" max-size="maxSize" class="pagination-sm" boundary-links="true" num-pages="numPages"  style="cursor: pointer;"></pagination>
-
+<br>
+<pagination class="pull-right" total-items="totalItems" page="currentPage" max-size="maxSize" class="pagination-sm" boundary-links="true" num-pages="numPages"  style="cursor: pointer;"></pagination>
+<h3>{{items}} </h3>
 <table class="table table-striped table-hover">  
     <thead>  
         <tr>  
@@ -26,4 +22,4 @@
     </tbody>  
     
 </table>
-<pagination total-items="totalItems" page="currentPage" max-size="maxSize" class="pagination-sm" boundary-links="true" num-pages="numPages"  style="cursor: pointer;"></pagination>
+<pagination class="pull-right" total-items="totalItems" page="currentPage" max-size="maxSize" class="pagination-sm" boundary-links="true" num-pages="numPages"  style="cursor: pointer;"></pagination>
