--- a/Modular/partials/structuresres.html
+++ b/Modular/partials/structuresres.html
@@ -1,11 +1,7 @@
 <div>
-	<h2>{{id}}</h2>
-	<h2>{{searchText}}</h2>
-	<h3>{{message}}</h3>
 <br>
-<h3>{{items}} </h3>  
-<pagination total-items="totalItems" page="currentPage" max-size="maxSize" class="pagination-sm" boundary-links="true" num-pages="numPages"  style="cursor: pointer;"></pagination>
-
+<pagination class="pull-right" total-items="totalItems" page="currentPage" max-size="maxSize" class="pagination-sm" boundary-links="true" num-pages="numPages"  style="cursor: pointer;"></pagination>
+<h3>{{items}}</h3>
 <table class="table table-striped table-hover">  
     <thead>  
         <tr>  
@@ -28,5 +24,5 @@
     </tbody>  
     
 </table>
-<pagination total-items="totalItems" page="currentPage" max-size="maxSize" class="pagination-sm" boundary-links="true" num-pages="numPages"  style="cursor: pointer;"></pagination>
+<pagination class="pull-right" total-items="totalItems" page="currentPage" max-size="maxSize" class="pagination-sm" boundary-links="true" num-pages="numPages"  style="cursor: pointer;"></pagination>
 </div>
