--- a/Modular/partials/compounds.html
+++ b/Modular/partials/compounds.html
@@ -13,11 +13,11 @@
     </thead>  
     <tbody>
         <tr ng-repeat="attribute in filteredData" ui-sref="acompound.overview({id:attribute._id})">
-            <td>
+            <td >
                 <img class="logo" ng-src="http://lincolnpark.chem-eng.northwestern.edu/Smiles_dump/{{attribute._id}}.svg" width="150" ></td>
-            <td>{{attribute.MINE_id}}</td>
-            <td><div ng-repeat="name in attribute.Names|limitTo:5">{{name}}<br></div></td>
-            <td>{{attribute.Formula}}</td>
+            <td  style="vertical-align:middle">{{attribute.MINE_id}}</td>
+            <td  style="vertical-align:middle"><div ng-repeat="name in attribute.Names|limitTo:5">{{name}}<br></div></td>
+            <td  style="vertical-align:middle">{{attribute.Formula}}</td>
         </tr>
     </tbody>  
     
