--- a/Modular/partials/metaboliteslist.html
+++ b/Modular/partials/metaboliteslist.html
@@ -1,5 +1,13 @@
-{{begin}} - {{end}} of {{totalItems}} Total Hits: {{items}}</br><pagination total-items="totalItems" page="currentPage" max-size="maxSize" class="pagination-sm" boundary-links="true" num-pages="numPages"  style="cursor: pointer;"></pagination>
-
+<div class="container">
+        <div class="row">
+            <div class="col-sm-7">
+            <pagination total-items="totalItems" page="currentPage" max-size="maxSize" class="pagination-sm" boundary-links="true" num-pages="numPages"  style="cursor: pointer;"></pagination>
+            </div>
+            <div class="col-sm-4" ></br></br>{{begin}} - {{end}} of {{totalItems}} Total Hits: {{items}}
+                <div ui-view></div>
+            </div>
+        </div>
+    </div>
 <table class="table table-striped table-hover">
   <thead>
 <tr>
@@ -19,10 +27,10 @@
 
 </tr>
 </thead>
-            <tr ng-repeat="f in filteredData">
-              <td>{{f.name}}</td>
-              <td>{{f.adduct}}</td>
-              <td>{{f.formula}}</td>
+            <tr ng-repeat="f in filteredData" >
+              <td style="vertical-align:middle">{{f.name}}</td>
+              <td style="vertical-align:middle">{{f.adduct}}</td>
+              <td style="vertical-align:middle">{{f.formula}}</td>
               <td style="text-align: center">
               <Ui style="list-style: none;">
                 <li><a  ui-sref="acompound.overview({id:f.id})">
