New general website tour

--- a/Modular/partials/FAQ.html
+++ b/Modular/partials/FAQ.html
@@ -1,5 +1,11 @@
 <div  ng-controller="resetCtl" >
 <h2>Frequently Asked Questions</h2>
+
+<h4>How do I use this website?</h4>
+<div class="well">
+    There's many ways you can use this website. Why don't you consider taking our general website tour or our
+    metabolomics tour?
+</div>
 <h4>How do you generate <i>in silico</i> metabolites?</h4>
 <div class="well">
     These compounds are generated from hand-curated reaction rules generalized form chemistry according to the Enzyme
