--- a/Modular/partials/acompound.html
+++ b/Modular/partials/acompound.html
@@ -11,7 +11,7 @@
 	    Product of ({{data.Product_of.length+0}})
 	  </tab-heading>
 	</tab>
-	<tab ui-sref="acompound.reactants">
+	<tab id="reactions" ui-sref="acompound.reactants">
 	  <tab-heading >
 	    Reactant in ({{data.Reactant_in.length+0}})
 	  </tab-heading>
