--- a/Modular/partials/general.html
+++ b/Modular/partials/general.html
@@ -3,7 +3,7 @@
 		<tr>
 			<td></td>
             <td>
-            <img ng-src="http://lincolnpark.chem-eng.northwestern.edu/Smiles_dump/{{data._id}}.svg"
+            <img id="compound-image" ng-src="http://lincolnpark.chem-eng.northwestern.edu/Smiles_dump/{{data._id}}.svg"
                      height="325" ng-click="launch_lightbox()">
             </td>
 		</tr>
