--- a/Modular/partials/overview.html
+++ b/Modular/partials/overview.html
@@ -21,7 +21,7 @@
 			</tbody>  
 		</table>
     </accordion-group>
-    <accordion-group heading=" Databases"  is-open="false">
+    <accordion-group id="db-links" heading=" Databases"  is-open="true">
 		<table class="table table-striped table-hover">    
 			<tbody>
 				<tr ng-repeat="(key,val) in data.DB_links" >
