--- a/Modular/partials/reactions.html
+++ b/Modular/partials/reactions.html
@@ -1,5 +1,5 @@
 <br>
-<div class="form-group">Search on Operators <input type="text" ng-model="searchOn"> <br></div>
+<div id="rxn-filter" class="form-group">Search on Operators <input type="text" ng-model="searchOn"> <br></div>
 <pagination total-items="totalItems" page="currentPage" max-size="maxSize" class="pagination-sm" boundary-links="true" num-pages="numPages"  style="cursor: pointer;"></pagination>
 <table class="table table-striped table-hover">
 	<tbody>
@@ -7,7 +7,7 @@
 			<td ng-repeat="op in attribute.Operators" style="vertical-align:middle">
 				<div style="font-size:16px">{{op}}</div>
 			</td>
-			<td ng-repeat="img in attribute.Reactants" >
+			<td id="rxn-img" ng-repeat="img in attribute.Reactants" >
 				<div ng-if= "grtZero(img[0])">{{img[1]}} <span ng-show=" ! $last ">+</span></div>
 				<div ng-mouseover="getCompoundName(img[1])" >
 				 <a  ui-sref="compounds({search:img[1]})">
