--- a/Modular/partials/reactions.html
+++ b/Modular/partials/reactions.html
@@ -1,6 +1,6 @@
-<br>
-<div id="rxn-filter" class="form-group">Search on Operators <input type="text" ng-model="searchOn"> <br></div>
-<pagination total-items="totalItems" page="currentPage" max-size="maxSize" class="pagination-sm" boundary-links="true" num-pages="numPages"  style="cursor: pointer;"></pagination>
+<div class="col-md-4"><br><input id="rxn-filter" class=form-control type="text" ng-model="searchOn" placeholder="Filter by EC class"></div>
+<pagination class="pull-right" total-items="totalItems" page="currentPage" max-size="maxSize" class="pagination-sm"
+            boundary-links="true" num-pages="numPages"  style="{cursor: pointer; vertical-align: top}"></pagination>
 <table class="table table-striped table-hover">
 	<tbody>
 		<tr ng-repeat="attribute in filteredData" >
@@ -31,4 +31,4 @@
 	</tbody>
 </table>
 
-<pagination total-items="totalItems" page="currentPage" max-size="maxSize" class="pagination-sm" boundary-links="true" num-pages="numPages"  style="cursor: pointer;"></pagination>
+<pagination class="pull-right" total-items="totalItems" page="currentPage" max-size="maxSize" class="pagination-sm" boundary-links="true" num-pages="numPages"  style="cursor: pointer;"></pagination>
