--- a/Modular/partials/FAQ.html
+++ b/Modular/partials/FAQ.html
@@ -1,10 +1,11 @@
-<div  ng-controller="resetCtl" >
+<div  ng-controller="cookieCtl">
 <h2>Frequently Asked Questions</h2>
 
 <h4>How do I use this website?</h4>
 <div class="well">
-    There's many ways you can use this website. Why don't you consider taking our general website tour or our
-    metabolomics tour?
+    There are many ways you can use this website but we have developed a few tours that show the basics. <br>
+    <button class="btn btn-primary" ng-click="startGeneralTour()">General Website Tour</button>
+    <button class="btn btn-primary" ng-click="">Metabolomics Tour</button>
 </div>
 <h4>How do you generate <i>in silico</i> metabolites?</h4>
 <div class="well">
