tour on the main page

--- a/Modular/partials/home.html
+++ b/Modular/partials/home.html
@@ -1,16 +1,43 @@
 <div  ng-controller="resetCtl"  class="jumbotron">
-  <div class="container">
-    <h2><span class="text-info">M</span>etabolic <span class="text-info">I</span>n Silico <span class="text-info">N</span>etwork <span class="text-info">E</span>xpansion Databases</h2>
-    <div class="row">
-        <div class="col-sm-3 ">
-            <img border="0" src="img/Gold-Miner-Icon.png" alt="Miner" width="120" height="122">
+    <div class="container">
+        <h2><span class="text-info">M</span>etabolic <span class="text-info">I</span>n Silico <span class="text-info">N</span>etwork <span class="text-info">E</span>xpansion Databases</h2>
+        <div class="row">
+            <div class="col-sm-3 ">
+                <img border="0" src="img/Gold-Miner-Icon.png" alt="Miner" width="150">
+            </div>
+            <div class="col-sm-8" >
+                <p>
+                    Welcome to the home of Metabolic In silico Network Expansions. These databases expand the known metabolome
+                    using the BNICE framework with hand-curated reaction rules. If it's your first time on the website, we
+                    recommend taking one of the tours below.
+                    Access to the database is also possible through client APIs in JavaScript, Python and Perl.
+                    Please contact us for the latest versions.
+                </p>
+            </div>
         </div>
-        <div class="col-sm-8" >
-            <p>
-            Welcome to the home of Metabolic In silico Network Expanstions. These databases expand the known metabolome using the BNICE framework with hand-curated reaction rules. There are a variety of methods to interact with the database: Search for compound names or identifiers names with quick search, find similar chemicals with structure search, or annotate accurate masses from the metabolomics. Access to the database is also possible through client APIs in JavaScript, Python and Perl. Please contact us for the latest versions.
-            </p>
+        <div class="col-md-4">
+        <div class="panel panel-primary" ng-click=startGeneralTour()>
+            <div class="panel-heading"><h3 class="panel-title">General Website Tour</h3></div>
+            <div class="panel-body">
+                    Learn how to use search the database with chemical identifiers or compound structures. Explore data on
+                    MINE compounds and view computational predicted reactions that involve a compound.
+            </div>
         </div>
+        </div>
+        <div class="col-md-4"><div class="panel panel-primary">
+            <div class="panel-heading"><h3 class="panel-title">Placeholder</h3></div>
+            <div class="panel-body">
+                    text
+                </p>
+            </div>
+        </div></div>
+        <div class="col-md-4"><div class="panel panel-primary">
+            <div class="panel-heading"><h3 class="panel-title">Placeholder</h3></div>
+            <div class="panel-body">
+                    text
+                </p>
+            </div>
+        </div></div>
     </div>
-  </div>
 </div>
 <a href="http://www.chemaxon.com"><img border="0" src="http://www.chemaxon.com/images/freeweb-150.gif" alt="ChemAxon" ></a>
