--- a/Modular/partials/operator.html
+++ b/Modular/partials/operator.html
@@ -6,7 +6,7 @@
 <body>
 <div class="col-sm-7">
     <h3>Operator Preview</h3>
-    <textarea ng-model="operator" class="form-control" style="{resize: none}" rows="30"></textarea>
+    <textarea id="op-text" ng-model="operator" class="form-control" style="{resize: none}" rows="30"></textarea>
     <div class="input-group">
         <input type='file' class="form-control" multiple='false' id='operatorFile'>
         <span class="input-group-btn">
@@ -16,7 +16,7 @@
 </div>
 <div class="col-sm-5">
     <h3>Testing Functions</h3>
-    <div class="panel panel-default">
+    <div id="cpd-test" class="panel panel-default">
         <div class="panel-heading">
             <h3 class="panel-title">Tested Compounds</h3>
         </div>
@@ -41,7 +41,7 @@
             </span>
         </div>
     </div><br>
-    <div class="panel panel-default">
+    <div id="map-test" class="panel panel-default">
         <div class="panel-heading">
             <h3 class="panel-title">Mapped Reactions</h3>
         </div>
