adding metabolomics stuff

--- a/Modular/partials/metaboliteslist.html
+++ b/Modular/partials/metaboliteslist.html
@@ -39,7 +39,7 @@
                 <li  >{{f.fname}}</li>
             </Ui>
               </td>
-              <td>{{f.MINE_id}}</td>
+              <td style="vertical-align:middle">{{f.MINE_id}}</td>
             </tr>
           </table>
     </div>
