--- a/Modular/partials/testm.html
+++ b/Modular/partials/testm.html
@@ -1,1 +1,11 @@
-<h1>Meta</h1>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+<h2>Models</h2>
+<input id="models_text" type="text" placeholder="Models Search" ng-model ="model">
+</br>
+{{model}}
