--- a/Modular/partials/creator.html
+++ b/Modular/partials/creator.html
@@ -1,7 +1,7 @@
 <div class="container">
-    <div class="col-sm-6 ">
+    <div class="col-sm-7 ">
         <div id="canvas" class="well">
-            <iframe src="editorws.html" frameborder="0" id="sketch" class="sketcher-frame" width = "500" height = "600"></iframe>
+            <iframe src="editorws.html" frameborder="0" id="sketch" class="sketcher-frame" width = 100% height = "600"></iframe>
         </div>
     </div>
     <div  class="col-sm-4 ">
@@ -60,7 +60,7 @@
                 <button type="button" ng-class="buttonColor('mrvProducts')" ng-click="mrvIO('mrvProducts')">Set Products</button>
              </div>
             <div class="btn-group">
-                <button type="button" ng-class="buttonColor('operator')" ng-click="buildOp()">Generate Operator</button>
+                <button type="button" ng-class="buttonColor('operator')" ng-click="buildOp()">Generate</button>
             </div>
         </div>
         <a href="http://www.chemaxon.com"><img border="0" src="http://www.chemaxon.com/images/powered_100px.gif" alt="ChemAxon" ></a>
