mostly fixing spelling

--- a/Modular/partials/metabolomics.html
+++ b/Modular/partials/metabolomics.html
@@ -1,13 +1,13 @@
-<div class="jumbotron">
+<!--<div class="jumbotron">
   <div class="container">
-  <h2>Metablomics</h2>
+  <h2>Metabolomics</h2>
   This tool proposes putative IDs for spectral features based on mass/charge ratio of the precursor ion. Tolerance may be specified in milliDaltons or parts per million(mDa is preferred) If Halogenated Compounds are checked, compounds containing halogens may show up in results. Adducts may be selected from the list by shift or ctrl clicking the desired adduct names
   </div>
 </div>
-
+-->
 <form role="form">
 	<div class="panel panel-default">
-  		<div class="panel-heading">Metablomics</div>
+  		<div class="panel-heading"><h2>Metabolomics</h2></div>
   		<div class="panel-body">
 			<div class="col-sm-6 ">
   				<div class="form-group">
