added metabolomics tour

--- a/Modular/partials/home.html
+++ b/Modular/partials/home.html
@@ -19,15 +19,17 @@
         <div class="panel panel-primary" ng-click=startGeneralTour()>
             <div class="panel-heading"><h3 class="panel-title">General Website Tour</h3></div>
             <div class="panel-body">
-                    Learn how to use search the database with chemical identifiers or compound structures. Explore data on
+                    Learn how to use search the database with chemical identifiers or compound structures and explore data on
                     MINE compounds and view computational predicted reactions that involve a compound.
             </div>
         </div>
         </div>
-        <div class="col-md-4"><div class="panel panel-primary">
-            <div class="panel-heading"><h3 class="panel-title">Placeholder</h3></div>
+        <div class="col-md-4">
+            <div class="panel panel-primary" ng-click=startMetabolomicsTour()>
+            <div class="panel-heading"><h3 class="panel-title">Metabolomics Tour</h3></div>
             <div class="panel-body">
-                    text
+                    Learn how to use search the database with mass/charge ratio data and explore and sort the resulting
+                    putative identifications.
                 </p>
             </div>
         </div></div>
