--- a/Modular/partials/reactions.html
+++ b/Modular/partials/reactions.html
@@ -4,9 +4,9 @@
 <table class="table table-striped table-hover">
 	<tbody>
 		<tr ng-repeat="attribute in filteredData" >
-			<td ng-repeat="op in attribute.Operators" style="vertical-align:middle">
-				<div style="font-size:16px">{{op}}</div>
-			</td>
+			<td style="vertical-align:middle"><div ng-repeat="op in attribute.Operators" style="font-size: 16px">
+                {{op}}
+            </div></td>
 			<td id="rxn-img" ng-repeat="img in attribute.Reactants" >
 				<div ng-if= "grtZero(img[0])">{{img[1]}} <span ng-show=" ! $last ">+</span></div>
 				<div ng-mouseover="getCompoundName(img[1])" >
