--- a/Modular/partials/structure.html
+++ b/Modular/partials/structure.html
@@ -1,7 +1,7 @@
 <div ng-model="molstrng">
     <div class="container">
         <div class="col-sm-7 ">
-            <div class="well">.
+            <div id="canvas" class="well">.
                 <iframe src="editorws.html" frameborder="0" id="sketch" class="sketcher-frame" width = "600" height = "600"></iframe>
             </div>
         </div>
@@ -9,7 +9,7 @@
 
 
             <fieldset>
-
+                <div id="search-options">
                 <legend>Search Type</legend>
                 <div class="radio">
                     <label class="radio" for="type_similarity">
@@ -29,8 +29,9 @@
                         Exact
                     </label>
                 </div>
+                    </div>
                 <legend>Options</legend>
-                <div class="form-group"><label for="similarity">Similarity threshold</label>
+                <div id="sim-thresh" class="form-group"><label for="similarity">Similarity threshold</label>
                     <input class="form-control input-sm" ng-model="sthresh" id="similarity" name="similarity" type="text" value="0.7" />
                 </div>
 
