more minor tweaks

--- a/Modular/partials/home.html
+++ b/Modular/partials/home.html
@@ -5,10 +5,10 @@
             <div class="col-sm-3 ">
                 <img border="0" src="img/Gold-Miner-Icon.png" alt="Miner" width="150">
             </div>
-            <div class="col-sm-8" >
+            <div class="col-sm-9" >
                 <p>
-                    Welcome to the home of Metabolic In silico Network Expansions. These databases expand the known metabolome
-                    using the BNICE framework with hand-curated reaction rules. If it's your first time on the website, we
+                    Welcome to the home of the MINE databases. These databases expand the known metabolome using the
+                    BNICE framework with hand-curated reaction rules. If it's your first time on the website, we
                     recommend taking one of the tours below.
                     Access to the database is also possible through client APIs in JavaScript, Python and Perl.
                     Please contact us for the latest versions.
@@ -17,29 +17,33 @@
         </div>
         <div class="col-md-4">
         <div class="panel panel-primary" ng-click=startGeneralTour()>
-            <div class="panel-heading"><h3 class="panel-title">General Website Tour</h3></div>
+            <div class="panel-heading"><span class="panel-title" style="font-size: 15pt">General Website Tour</span></div>
             <div class="panel-body">
-                    Learn how to use search the database with chemical identifiers or compound structures and explore data on
-                    MINE compounds and view computational predicted reactions that involve a compound.
+                <p style="font-size: 13pt">
+                    Learn how to use search the database with chemical identifiers or compound structures and explore
+                    data on MINE compounds and view computational predicted reactions.
+                </p>
             </div>
         </div>
         </div>
         <div class="col-md-4">
             <div class="panel panel-primary" ng-click=startMetabolomicsTour()>
-            <div class="panel-heading"><h3 class="panel-title">Metabolomics Tour</h3></div>
+            <div class="panel-heading"><span class="panel-title" style="font-size: 15pt">Metabolomics Tour</span></div>
             <div class="panel-body">
+                <p style="font-size: 13pt">
                     Learn how to use search the database with mass/charge ratio data and explore and sort the resulting
                     putative identifications.
                 </p>
             </div>
         </div></div>
         <div class="col-md-4"><div class="panel panel-primary">
-            <div class="panel-heading"><h3 class="panel-title">Placeholder</h3></div>
+            <div class="panel-heading"><span class="panel-title" style="font-size: 15pt">Pathway Tools</span></div>
             <div class="panel-body">
-                    text
+                <p style="font-size: 13pt">
+                    Coming Soon.
                 </p>
             </div>
         </div></div>
     </div>
+    <a class="pull-right" href="http://www.chemaxon.com"><img border="0" src="http://www.chemaxon.com/images/freeweb-150.gif" alt="ChemAxon" ></a>
 </div>
-<a href="http://www.chemaxon.com"><img border="0" src="http://www.chemaxon.com/images/freeweb-150.gif" alt="ChemAxon" ></a>
