--- a/Modular/partials/metabolomics.html
+++ b/Modular/partials/metabolomics.html
@@ -1,62 +1,44 @@
-<!--<div class="jumbotron">
-  <div class="container">
-  <h2>Metabolomics</h2>
-  This tool proposes putative IDs for spectral features based on mass/charge ratio of the precursor ion. Tolerance may be specified in milliDaltons or parts per million(mDa is preferred) If Halogenated Compounds are checked, compounds containing halogens may show up in results. Adducts may be selected from the list by shift or ctrl clicking the desired adduct names
-  </div>
-</div>
--->
 <form role="form">
-	<div class="panel panel-default">
-  		<div class="panel-heading"><h2>Metabolomics</h2></div>
-  		<div class="panel-body">
-			<div class="col-sm-6 ">
-  				<div class="form-group">
-    				<label>Peak M/Z</label>
-    				<textarea id="trace" ng-model="trace" class="form-control" rows="10"></textarea>
-  				</div>
-  			</div>
-   			<div class="col-sm-5 ">
-		  	<div id="tolerance" class="form-group">
-		    	<label>Tolerance </label></br>
-		    	<input type="number" name="input" ng-model="tolerance" min="0" max="99" required>
-        		<div class="radio">
-                <input type="radio" value=true ng-model="unit">
-                ppm
+    <div class="panel panel-default">
+        <div class="panel-heading"><h2>Metabolomics</h2></div>
+        <div class="panel-body">
+            <div class="col-sm-5 ">
+                <div class="form-group">
+                    <label>Peak M/Z</label>
+                    <textarea id="trace" ng-model="trace" class="form-control" rows="8"></textarea>
+                </div>
             </div>
-            <div class="radio">
-                <input type="radio"  value=false ng-model="unit" ng-checked="1">
-                mDa
-            </div>
-    		</div>
-		  	<div id="halogen" class="checkbox">
-		  		<label>Halogenated compounds <input type="checkbox" ng-model="halogenated" ng-checked="0">
-		  		</label>
-        	</div>
+            <div class="col-sm-3 ">
+                <label>Charge </label>
+                <select id="charge" class="form-control" ng-model="charge" ng-options="c.name for c in charges"></select>
+                </br>
 
-		  	<label>Charge </label>
-		  	<select id="charge" class="form-control" ng-model="charge" ng-options="c.name for c in charges"></select>
-        	</br>
+                <label>Adducts </label></br>
 
-        	<label>Adducts </label></br>
-
-    		<select id="adducts" multiple ng:model="statuses" >
+                <select class="form-control" id="adducts" multiple ng:model="statuses" >
                     <option ng-repeat="s in adduct[charge.id]" value="{{s}}">{{s}}</option>
-            </select>
-
-
-        	</br>
-
-        	</br>
-
-           <a class="btn  btn-primary " ng-disabled="enable" ui-sref="metabolomicsCompounds"><span class="glyphicon glyphicon-search"></span>
-             Search</a>
-           </br>
-         </br>
-             <a class="btn  btn-primary " ng-disabled="enable" ui-sref="AlternateMetabolomicsCompounds"><span class="glyphicon glyphicon-search"></span>
-
-
-          SearchC</a>
-  		</div>
-  	</div>
-  </div>
+                </select>
+            </div>
+            <div class="col-sm-3 ">
+                <div id="tolerance" class="form-group">
+                    <label>Tolerance </label></br>
+                    <input type="number" name="input" ng-model="tolerance" min="0" max="99" required>
+                    <div class="radio">
+                        <input type="radio" value=true ng-model="unit">
+                        ppm
+                    </div>
+                    <div class="radio">
+                        <input type="radio"  value=false ng-model="unit" ng-checked="1">
+                        mDa
+                    </div>
+                </div>
+                <div id="halogen" class="checkbox">
+                    <label>Halogenated compounds <input type="checkbox" ng-model="halogenated" ng-checked="0">
+                    </label>
+                </div>
+                <a class="btn btn-block btn-primary" style="margin: 0 auto;" ng-disabled="enable" ui-sref="AlternateMetabolomicsCompounds">
+                <span class="glyphicon glyphicon-search"></span> Search</a>
+            </div>
+        </div>
+    </div>
 </form>
