changed image sources

--- a/Modular/partials/metaboliteslist.html
+++ b/Modular/partials/metaboliteslist.html
@@ -34,7 +34,7 @@
               <td style="text-align: center">
               <Ui style="list-style: none;">
                 <li><a  ui-sref="acompound.overview({id:f.id})">
-                  <img id="met-img" class="logo" ng-src="http://lincolnpark.chem-eng.northwestern.edu/Smiles_dump/{{f.id}}.svg" width="70" alt="No image avalable">
+                  <img id="met-img" class="logo" ng-src="http://minedatabase.mcs.anl.gov/compoundImages/{{f.id}}.svg" width="70" alt="No image avalable">
                 </a></li>
                 <li  >{{f.fname}}</li>
             </Ui>
