--- a/Modular/partials/general.html
+++ b/Modular/partials/general.html
@@ -3,7 +3,7 @@
 		<tr>
 			<td></td>
             <td>
-            <img id="compound-image" ng-src="http://lincolnpark.chem-eng.northwestern.edu/Smiles_dump/{{data._id}}.svg"
+            <img id="compound-image" ng-src="http://minedatabase.mcs.anl.gov/compoundImages/{{data._id}}.svg"
                      height="325" ng-click="launch_lightbox()">
             </td>
 		</tr>
@@ -34,6 +34,6 @@
 	</tbody>  
 </table>
 <div hidden class="panel panel-default col-md-6" id="cpd-img">
-    <img ng-src="http://lincolnpark.chem-eng.northwestern.edu/Smiles_dump/{{data._id}}.svg"
+    <img ng-src="http://minedatabase.mcs.anl.gov/compoundImages/{{data._id}}.svg"
                      width="100%" ng-click="launch_lightbox()">
 </div>
