--- a/Modular/partials/structuresres.html
+++ b/Modular/partials/structuresres.html
@@ -15,7 +15,7 @@
         <tr ng-repeat="attribute in filteredData" ng-click="setSelected();" >
             <td>
                 <a  ui-sref="acompound.overview({id:attribute._id})">
-                    <img class="logo" ng-src="http://lincolnpark.chem-eng.northwestern.edu/Smiles_dump/{{attribute._id}}.svg" width="150" >
+                    <img class="logo" ng-src="http://minedatabase.mcs.anl.gov/compoundImages/{{attribute._id}}.svg" width="150" >
                 </a></td>
             <td>{{attribute.MINE_id}}</td>
             <td>{{attribute.Names[0]}}</td>
