--- a/Modular/partials/reactions.html
+++ b/Modular/partials/reactions.html
@@ -11,7 +11,7 @@
 				<div ng-if= "grtZero(img[0])">{{img[1]}} <span ng-show=" ! $last ">+</span></div>
 				<div ng-mouseover="getCompoundName(img[1])" >
 				 <a  ui-sref="compounds({search:img[1]})">
-					<img popover="{{cName}}" popover-trigger="mouseenter"   ng-src="http://minedatabase.mcs.anl.gov/compoundImages/{{img[1]}}.svg" width="75">
+					<img popover="{{cName}}" popover-trigger="mouseenter"   ng-src="http://lincolnpark.chem-eng.northwestern.edu/Smiles_dump/{{img[1]}}.svg" width="75">
 				</a>
 			</div>
 			</td>
@@ -22,7 +22,7 @@
 			    <div ng-if= "grtZero(img[0])">{{img[1]}}</div>
 					<div ng-mouseover="getCompoundName(img[1])" >
 				<a  ui-sref="compounds({search:img[1]})">
-					<img popover="{{cName}}" popover-trigger="mouseenter"   ng-src="http://minedatabase.mcs.anl.gov/compoundImages/{{img[1]}}.svg" width="75">
+					<img popover="{{cName}}" popover-trigger="mouseenter"   ng-src="http://lincolnpark.chem-eng.northwestern.edu/Smiles_dump/{{img[1]}}.svg" width="75">
 				</a>
 			</div>
 			 </div>
