--- a/Modular/partials/structual.html
+++ b/Modular/partials/structual.html
@@ -1,8 +1,5 @@
 <div class="container">
-   
-    				<iframe src="editorws.html" id="sketch" class="sketcher-frame" width = "600" height = "600"></iframe>
-  
-    
+   <iframe src="editorws.html" id="sketch" class="sketcher-frame" width = "600" height = "600"></iframe>
 		<div>
 			<ul>
 				<li><strong>Display options</strong></li>
@@ -24,14 +21,8 @@
 				</li>
 				<li>&nbsp;</li>
 				
-				<li><input type="button" id="btn-molExport" value="Export"></input></li>
+				<li><input type="button" id="btn-molExport" value="Export"></li>
 			</ul>
 			
 			</div>
-
-  
-			
-			
-
-
     <div>
