--- a/Modular/partials/list.html
+++ b/Modular/partials/list.html
@@ -28,7 +28,7 @@
                 <td style="text-align: center"> 
                 <Ui style="list-style: none;">
                   <li><a  ui-sref="acompound.overview({id:i._id})">
-                    <img class="logo" ng-src="http://minedatabase.mcs.anl.gov/compoundImages/{{i._id}}.svg" width="70" >
+                    <img class="logo" ng-src="http://lincolnpark.chem-eng.northwestern.edu/Smiles_dump/{{i._id}}.svg" width="70" >
                   </a></li>
                   <li  >{{i.Names[0]}}</li>
               </Ui>
