--- a/Modular/partials/general.html
+++ b/Modular/partials/general.html
@@ -34,6 +34,7 @@
 	</tbody>  
 </table>
 <div hidden class="panel panel-default col-md-6" id="cpd-img">
+    <!--<span onclick="$('#cpd-img').trigger('close')" style="font-size: 25pt" class="glyphicon glyphicon-remove pull-right"></span>-->
     <img ng-src="http://lincolnpark.chem-eng.northwestern.edu/Smiles_dump/{{data._id}}.svg"
-                     width="100%" ng-click="launch_lightbox()">
+                     width="100%">
 </div>
