--- a/Modular/partials/FAQ.html
+++ b/Modular/partials/FAQ.html
@@ -5,12 +5,12 @@
 <div class="well">
     There are many ways you can use this website but we have developed a few tours that show the basics. <br>
     <button class="btn btn-primary" ng-click="startGeneralTour()">General Website Tour</button>
-    <button class="btn btn-primary" ng-click="">Metabolomics Tour</button>
+    <button class="btn btn-primary" ng-click="startMetabolomicsTour()">Metabolomics Tour</button>
 </div>
 <h4>How do you generate <i>in silico</i> metabolites?</h4>
 <div class="well">
     These compounds are generated from hand-curated reaction rules generalized form chemistry according to the Enzyme
-    Commission classification system. For more information please refer to:
+    Commission classification system. For more information please refer to: "future publication"
 </div>
 
 <h4>Why don't the compounds database include stereochemistry?</h4>
@@ -31,13 +31,13 @@
 <div class="well">
     We would love to hear about it. Please let us know by sending an email to
         <a href="mailto:minedatabasescontact@gmail.com?" target="_top"> minedatabasescontact@gmail.com</a>
-    and let us know. If reproting a bug, please include information as to how the error was generated.
+    and let us know. If reporting a bug, please include information as to how the error was generated.
 </div>
 
 <h4>Are there any restrictions on the use of this website and APIs?</h4>
 <div class="well">
     MINEs are provided as a freely available resource. There are no licensing restrictions for non-commercial use but
-    users are requested to cite: Commercial users must obtain a license from Pathway Solutions Inc.
+    users are requested to cite: "future publication". Commercial users must obtain a license from Pathway Solutions Inc.
     (www.pathway.jp) and explicit permission from the authors.
 </div>
 </div>
