--- a/Modular/partials/reactions.html
+++ b/Modular/partials/reactions.html
@@ -1,6 +1,9 @@
-<div class="col-md-4"><br><input id="rxn-filter" class=form-control type="text" ng-model="searchOn" placeholder="Filter by EC class"></div>
+<div class="col-md-4">
+    <br><input id="rxn-filter" class=form-control type="text" ng-model="searchOn" placeholder="Filter by EC class">
+</div>
 <pagination class="pull-right" total-items="totalItems" page="currentPage" max-size="maxSize" class="pagination-sm"
             boundary-links="true" num-pages="numPages"  style="{cursor: pointer; vertical-align: top}"></pagination>
+<br>
 <table class="table table-striped table-hover">
 	<tbody>
 		<tr ng-repeat="attribute in filteredData" >
