--- a/Modular/partials/compounds.html
+++ b/Modular/partials/compounds.html
@@ -12,7 +12,7 @@
         </tr>  
     </thead>  
     <tbody>
-        <tr id="comp-row" ng-repeat="attribute in filteredData" ui-sref="acompound.overview({id:attribute._id})">
+        <tr id="comp-row" ng-repeat="attribute in filteredData" ui-sref="acompound.overview({id:attribute._id})" style="cursor: pointer;">
             <td >
                 <img class="logo" ng-src="http://lincolnpark.chem-eng.northwestern.edu/Smiles_dump/{{attribute._id}}.svg" width="150" ></td>
             <td  style="vertical-align:middle">{{attribute.MINE_id}}</td>
