--- a/Modular/partials/FAQ.html
+++ b/Modular/partials/FAQ.html
@@ -3,9 +3,11 @@
 
 <h4>How do I use this website?</h4>
 <div class="well">
-    There are many ways you can use this website but we have developed a few tours that show the basics. <br>
-    <button class="btn btn-primary" ng-click="startGeneralTour()">General Website Tour</button>
-    <button class="btn btn-primary" ng-click="startMetabolomicsTour()">Metabolomics Tour</button>
+    <p>There are many ways you can use this website but we have developed a few tours that show the basics.</p>
+    <ul>
+        <li><a style="font-size: 12pt" ng-click="startGeneralTour()">General Website Tour</a></li>
+        <li><a style="font-size: 12pt" ng-click="startMetabolomicsTour()">Metabolomics Tour</a></li>
+    </ul>
 </div>
 <h4>How do you generate <i>in silico</i> metabolites?</h4>
 <div class="well">
